# codex-openai-proxy

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh
config/: example.auth.json  example.config.json  proxy.json
scripts/: openai_sdk_smoke.py  smoke_openai_sdk.sh  smoke_proxy.sh
src/: app.rs  auth_cmd.rs  backend.rs  config.rs  execution.rs  main.rs  models.rs
src/http/: handlers.rs  logging.rs  mod.rs
src/routing/: analyzer.rs  decision.rs  mod.rs  policy.rs
