[package]
name = "codex-openai-proxy"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bytes = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "0.11"
env_logger = "0.10"
futures-util = "0.3"
log = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
warp = "0.3"
